<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".CreateAnAccount"
    android:paddingTop="20dp"
    android:paddingLeft="30dp">

    <EditText
    android:id="@+id/et_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/et_name"
    android:background="@color/colorWhite"
    android:textSize="29sp"
    android:ems="8"
    android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_username"
        android:background="@color/colorWhite"
        android:textSize="29sp"
        android:ems="8"
        android:inputType="textPersonName"
        android:layout_below="@id/et_name"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        android:background="@color/colorWhite"
        android:textSize="29sp"
        android:ems="8"
        android:inputType="textPassword"
        android:layout_below="@id/et_username"
        android:layout_marginTop="15dp"/>

    <ImageView
        android:id="@+id/iv_change_photo"
        android:layout_width="273dp"
        android:layout_height="46dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/gradient_button_background" />

    <TextView
        android:id="@+id/tv_change_photo"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_alignLeft="@id/iv_change_photo"
        android:layout_alignTop="@id/iv_change_photo"
        android:layout_alignRight="@id/iv_change_photo"
        android:layout_alignBottom="@id/iv_change_photo"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="-2dp"
        android:fontFamily="@font/ms500"
        android:gravity="center"
        android:text="@string/tv_change_photo"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_age"
        android:background="@color/colorWhite"
        android:textSize="29sp"
        android:ems="8"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:layout_below="@id/iv_change_photo" />

    <Button
        android:id="@+id/et_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_age"
        android:ems="9"
        android:clickable="true"
        android:text="@string/btn_txt_choose_birth_date"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:textSize="23sp" />

    <Button
        android:id="@+id/et_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_choose_a_country"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:textSize="23sp"
        android:ems="9"
        android:layout_marginTop="15dp"
        android:inputType="date"
        android:layout_below="@id/et_birth_date"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ms500"
        android:text="@string/tv_txt_gender"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_below="@id/et_country"/>

    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_marginTop="390dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_female"
            android:text="@string/rd_female"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:buttonTint="@color/colorWhite"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_male"
            android:text="@string/rd_male"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:buttonTint="@color/colorWhite"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_not_specified"
            android:text="@string/rd_not_specified"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:buttonTint="@color/colorWhite"
            android:checked="true"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/iv_android_logo"
        android:layout_width="128dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/android_logo"
        android:layout_toRightOf="@id/et_name"/>

    <ImageView
        android:id="@+id/iv_save"
        android:layout_width="273dp"
        android:layout_height="46dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="399dp"
        app:srcCompat="@drawable/gradient_button_background" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_alignLeft="@id/iv_save"
        android:layout_alignTop="@id/iv_save"
        android:layout_alignRight="@id/iv_save"
        android:layout_alignBottom="@id/iv_save"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="-2dp"
        android:fontFamily="@font/ms500"
        android:gravity="center"
        android:text="@string/tv_save"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_postal_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Postal Address (Opt)"
        android:layout_weight="1"
        android:layout_above="@id/tv_save"
        android:background="@color/colorWhite"
        android:textSize="29dp"
        android:ems="8"
        android:layout_marginBottom="15dp"
        android:inputType="textPersonName"/>

</RelativeLayout>