<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/colorGrey"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/il_profile_pic"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:src="@drawable/android_logo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/il_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/il_profile_pic"
        android:layout_margin="4dp"
        tools:text="@string/tv_txt_profile_name"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/il_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/il_name"
        app:layout_constraintLeft_toRightOf="@id/il_profile_pic"
        android:layout_margin="4dp"
        tools:text="@string/txt_tv_profile_username"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/il_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="60dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/il_name"
        app:layout_constraintStart_toEndOf="@+id/il_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_txt_profile_age"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/il_birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="40dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/il_username"
        app:layout_constraintTop_toBottomOf="@id/il_age"
        tools:text="@string/tv_txt_profile_birthdate"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/il_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/il_username"
        app:layout_constraintLeft_toRightOf="@id/il_profile_pic"
        android:layout_margin="4dp"
        tools:text="@string/tv_txt_profile_country"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/il_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/il_username"
        app:layout_constraintLeft_toRightOf="@id/il_country"
        android:layout_marginTop="4dp"
        android:paddingLeft="50dp"
        tools:text="@string/tv_txt_profile_gender"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/il_postal_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/il_country"
        app:layout_constraintLeft_toRightOf="@id/il_profile_pic"
        android:layout_margin="4dp"
        tools:text="@string/tv_txt_profile_postalcode"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>